[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "calm"
version = "0.1.0"
description = "CALM: Congestion-Aware Lookahead Mobility — PIBT MAPF engine + congestion heatmap prediction"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
viz = ["matplotlib"]

[tool.setuptools.packages.find]
include = ["calm*"]
