[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "macpf"
version = "0.0.1"
description = "MAPF with a learned congestion-prediction term added on top of the conventional planner, for more efficient path-generation in multi-agent systems."
authors = [
  { name = "Chung-Ang Univ." },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.12.0"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "pillow",
    "typer",
    "loguru",
    "tqdm",
    "python-dotenv",
]


[tool.ruff]
line-length = 99
src = ["macpf"]
include = ["pyproject.toml", "macpf/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["macpf"]
force-sort-within-sections = true

